# cdaf

./: .gitignore  get_datasets.sh  pyproject.toml
1/: ativ_1.ipynb  ativ_1.py
2/: ativ_2.ipynb  ativ_2.py  big_brazillian.csv  br_def.csv  serie-a.csv
3/: ativ_3.ipynb  ativ_3.py
4/: ativ_4.ipynb  ativ_4.py
5/: ativ_5.ipynb  ativ_5.py  vaep.md
6/: ativ_6.ipynb  ativ_6.py  player_vector.md
